<resources>
	<string name="advice">We recommend you to use headphones in order to this game.</string>
    <string name="group_name">A game by, Blind Faith Games</string>
    <string name="mode">This application works on portrait mode.</string>
    <string name="interactionMode_select">This is a research project that tries to gather insight on how blind people play games on mobile
	devices and how developers could make games that are not only accessible, but also enjoyable for them. Select an interaction mode depending
	on if you have visual discapacity or not. To select make a long press to select an option</string>
    <string name="interactionMode_select_TTS">This is a research project that tries to gather insight on how blind people play games on mobile
	devices and how developers could make games that are not only accessible, but also enjoyable for them. Select an interaction mode depending
	on if you have visual discapacity or not. To select make a long press to select an option</string>
    <string name="blindMode_label">Blind interaction</string>
    <string name="noBlindMode_label">Standard interaction</string>
    <string name="tts_select">In order to get a better game experience, we recommend you to download the "IVONA Text-to-Speech HQ" synthesizer. Blind Faith Games is not associated or have any relation with IVONA project but we think that is the best
	synthetizer. Would you like to install it?</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="introMessage">Welcome, please select a difficulty</string>
    <string name="introMainMenu">Main menu Golf Game, you can navigate through the menu by making simple taps in the different options
    							 and just make a long press to select one of the options below</string>
    <string name="buttonMessage">Go!</string>
    <string name="golfGamerActivity">Golf game</string>
    <string name="exitButton">Exit</string>
    <string name="app_name">Golf Game</string>
    <string name="main_title">Golf Game</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="keyConf_label">Key Configuration</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="tutorial_label">Game Tutorial</string>
	<string name="form_label">Form</string>
    <string name="about_title">About Golf Game</string>
    <string name="about_text">
		Golf Game, 2012. \n\n
		
		Golf Game is part of Blind Faith Games (BFG), a research project about how to deliver eyes-free game experiences that are enjoyable on your Android&#8482; 
		device regardless of your sight capabilities. If you have some time to spare, please help us to improve the game by filling in the feedback form that can be reached from the main menu.\n\n
		
		
		BFG is a project of the e-UCM research group, developed by Gloria Pozuelo and Javier Álvarez.\n
		e-UCM is a research group of the Department of Software Engineering and Artificial Intelligence at the Complutense University of Madrid.\n\n
		
		More info at: <a href="http://blind-faith-games.e-ucm.es">http://blind-faith-games.e-ucm.es</a>\n
		Contact us at: android@e-ucm.es  \n\n   
		
		Music: Kevin MacLeod \n\n   
		
		<i>Android is a trademark of Google Inc.</i>
	</string>
    <string name="settings_label">Settings</string>
    <string name="settings_title">Golf Game settings</string>
    <string name="settings_shortcut">s</string>
    <string name="main_category">Main</string>
    <string name="profiles_category">Profiles</string>
    <string name="custom_profile_category">Custom Profile</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="tts_title">Default TTS</string>
    <string name="tts_summary">Enables voice synthetizer</string>
    <string name="infoTarget_title">Clues to find target</string>
    <string name="infoTarget_summary">Enables sounds that will be played when you find the target dragging on the screen</string>
    <string name="v_feedback_title">Vibration feedback</string>
    <string name="v_feedback_summary">A range of vibrations helps to find target</string>
    <string name="s_feedback_title">Sound effect feedback</string>
    <string name="s_feedback_summary">Stereo sound helps to find target</string>
    <string name="doppler_title">Sound post-shot</string>
    <string name="doppler_summary">A sound will be played before you shoot.</string>
    <string name="profileA_title">Profile A</string>
    <string name="profileA_summary"> - </string>
    <string name="profileB_title">Profile B</string>
    <string name="profileB_summary"> - </string>
    <string name="transcription_title">Transcription mode</string>
    <string name="transcription_summary">It shows text that contains the TTS speech</string>
    <string name="blind_interaction_title">Blind Interaction Mode</string>
    <string name="blind_interaction_summary">It adds one more touch to each screen touch event</string>
    <string name="blind_mode_title">Black Screen Mode</string>
    <string name="blind_mode_summary">Allows to use the application without any visual reference in the game and main menu.</string>
    <string name="game_title">Game</string>
    <string name="flags_title">Flags settings</string>
    <string name="flags_shortcut">f</string>
    <string name="instructions_label">Instructions</string>
    <string name="instructions_title">How to play Golf game</string>
    <string name="instructions_general_label">How to use this game</string>
    <string name="instructions_controls_label">How to configurate</string>
    <string name="instructions_general_text">You only have to point and shoot within the shot area!  
    This area is located at the bottom of the screen. Don\'t worry if you don\'t find the shot area, if you do any tap or gesture outside this area
    you\'ll hear a beep sound. </string>
    <string name="instructions_controls_text">Within settings you can choose between the next options:\n
		1 - UpMode enables slingshot mode. In golf, exists two modes of shot. Fling and Slingshot. 
		The first one is enabled by default, allows you shoot, doing a quick scroll on the shot area. 
		Using Slingshot mode you have to do a tap, drag and release your finger to shot.\n
		2 - Info target allows you to find the hole by simply touching and dragging on the screen. \n
		3 - Sound post-shot enables to play a sound whose pitch is decreased during a shot.\n
		4 - Vibration and Sound feedback - before you shot, a vibration/sound will help you to find where is the hole. To use them during
		the game you have to describe an arc by dragging your finger on the shot area. You will find the shot area at the bottom on the screen. If you try to do this gestures
		outside the shot area you will hear a beep sound. The louder vibration/sound you feel/heard, 
		the more accurate will be your shoot. Moreover in sound feedback,
		if you use headphones, the sound will be played only on one headphone. That indicates that the best position is on the left
		or on the right from your actual position while you point describing an arc dragging your finger on the shot area.\n
		you will find more information in the game tutorial.
	</string>
    <string name="synthetizer_title">Synthesizer</string>
        <string name="synthesizer_suggestion">We recommend you to download the "IVONA Text-to-Speech HQ" synthesizer</string>
    <string name="onup_title">Slingshot mode</string>
    <string name="onup_summary">Enables to shoot like a Slingshot.</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="options">Options</string>
    <string name="search">Search</string>
    <string name="alert_dialog_modes_TTStext">Dialog select mode</string>
    <string name="alert_dialog_instructions_TTStext">Dialog</string>
    <string name="main_menu_initial_TTStext">Main menu</string>
    <string name="settings_menu_initial_TTStext">Menu settings. 
			    By tapping on each element on this menu changes and reads an option. Particular in this menu you can
			    find two profile options\: A and B whose activation enables another options on the menu. Of course, 
			    you can continue enabling independently all option on the menu. You will find the next options on this menu\: 
   </string>
    <string name="game_initial_TTStext">Game started!</string>
    <string name="game_initial_stage_TTStext">Game started! Stage 1</string>
    <string name="coordinates_information_button_TTStext">Position</string>
    <string name="key_configuration_menu_initial_TTStext">
			  	Key Configuration. By tapping on your left you could listen the action descriptions
			     and by tapping on your right you will change the key related 
			    by an action. If you are in blind interaction mode you have to do a long click
			     to be able to change the configuration. You have the next options\: 
    </string>
    <string name="keydialog">Action configuration</string>
    <string name="keydialog_text">Press any key</string>
    <string name="button_speak_record">Play record in game</string>
    <string name="button_repeat">To repeat the last sinthetizer voice message</string>
    <string name="StageMode">Stage Mode</string>
    <string name="FreeMode">Free Mode</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="new_game_dialog_title">Mode Selection</string>
    <string name="recordSpeech">your actual record is</string>
    <string name="counterSpeech">your actual count is</string>
    <string name="newRecordSpeech">New record!</string>
    <string name="EndingDialogTitle">Round completed</string>
    <string name="EndingPositiveButtonLabel">Ok</string>
    <string name="EndingPositiveButtonLabelSpeech">Press ok to back to the main menu</string>
    <string name="alertOutsideShotArea">You are outside of the shot area. To be able to shot you have to make a scroll gesture on the bottom of the screen.</string>
    <string name="ranking_title">Time,  Date and  Record. </string>
    <string name="ranking_speech">Previous games ranking. You can listen this ranking clicking on each cell.</string>
    <string name="instructions_dialog_select">Select configuration or use</string>
    <string name="game_dialog_select">Select difficulty</string>
    <string name="initial_settings">Click any option</string>
    <string name="key_conf_fail">Not a valid key</string>
    <string name="key_conf_success">You have changed the key associated with</string>
    <string name="stage_speech">Stage number</string>
     <string name="tutorial_step0_dialog_select">In this tutorial you\'ll learn the game basics. The game goal is achieve the highest score. This must be successful launch pit.
         You can launch the ball at the launch area located at the bottom of the screen. When you will leave this area, you will hear a beep notification sound. We have two modes of play,
         free mode, where you can make as many shots as you want and 18 holes mode, which will count the score on 18 holes. To find your score, you has
         a marker on the left edge of the screen to the height of the throwing area. If you make a click on it, it will notify you the cumulative score achieved.</string>
    <string name="tutorial_step1_dialog_select">All this features can be enabled/disabled in the settings menu. Tutorial begins! To shoot you have to do a fling on the shoot area.
    i.e. you have to do a quick scroll gesture in the direction that you want to shoot</string>
    <string name="tutorial_step2_dialog_select">By default that is the shot mode. Each time you score a shot, the target will change its position.</string>
</resources>